# discord-event-bus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
discord_event_bus/: __init__.py  _http.py  api.py  embed_validation.py  errors.py  manifest.py  rate_limit.py
docs/: ARCHITECTURE.md  EMBED_PROTOCOL.md  MANIFEST_SCHEMA.md  ROADMAP.md
examples/: README.md  basic_async.py  basic_sync.py  manifest.toml
tests/: test_embed_validation.py  test_errors.py  test_log_mask.py  test_manifest.py  test_publish_async.py  test_publish_sync.py  test_rate_limit_async.py  test_rate_limit_sync.py  test_retry.py
tests/fixtures/: manifest_examples.toml
tests/integration/: test_full_publish_async.py  test_full_publish_sync.py
