[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-event-bus"
version = "0.1.0"
description = "Generic Discord webhook publisher with manifest-driven channel routing (sync + async)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Yeimaoz"}]
keywords = ["discord", "webhook", "publisher", "event-bus", "bot", "notification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Yeimaoz/discord-event-bus"
Repository = "https://github.com/Yeimaoz/discord-event-bus"
Issues = "https://github.com/Yeimaoz/discord-event-bus/issues"
Changelog = "https://github.com/Yeimaoz/discord-event-bus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["discord_event_bus*"]

[tool.setuptools.package-data]
discord_event_bus = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
